Versao mais recente do sistema

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="branco">#FFFFFF</color>
     <color name="cinza">#9B9C78</color>
     <color name="verde">#07FF00</color>
+    <color name="vermelho">#D13A2F</color>
 
 </resources>
